# embedded2026

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
bsp/: CMakeLists.txt
bsp/modellbahn-adapter-a/: CMakeLists.txt
bsp/modellbahn-adapter-a/inc/: bsp.h
bsp/nucleo-f446ze/: CMakeLists.txt
bsp/nucleo-f446ze/inc/: bsp.h  nucleo-f446ze.h
cmake/: doxygen.cmake  global.cmake
docs/: Doxyfile.in
mcal/: CMakeLists.txt
mcal/STM32F446ZE/: CMakeLists.txt
mcal/inc/: mcal.hpp  units.hpp
mcal/inc/concept/: delay.hpp  gpio.hpp
mcal/inc/concepts/: concepts.hpp  delay.hpp  gpio.hpp
mcal/src/: syscalls.c  sysmem.c
mcal/stm32/: CMakeLists.txt
mcal/stm32/f4/: CMakeLists.txt
mcal/stm32/f4/STM32F446ZE/: CMakeLists.txt  STM32F446ZETX_FLASH.ld
mcal/stm32/f4/STM32F446ZE/inc/: gpio.hpp
mcal/stm32/f4/inc/: clock.hpp  delay.hpp  f4.hpp  gpio.hpp  utils.hpp
mcal/stm32/f4/src/: startup.cpp
projects/: CMakeLists.txt
projects/blinky/: CMakeLists.txt
projects/blinky/src/: main.cpp
projects/modellbahn/: CMakeLists.txt
projects/modellbahn/src/: main.cpp  syscalls.c
projects/nucleof446ze/blinky/: CMakeLists.txt
projects/nucleof446ze/blinky/src/: main.cpp  syscalls.c  sysmem.c
projects/rtos-blinky/: CMakeLists.txt
projects/rtos-blinky/inc/: FreeRTOSConfig.h
projects/rtos-blinky/src/: main.cpp
tools/: arm-gcc-toolchain.cmake
